--- a/shop.html
+++ b/shop.html
@@ -12,12 +12,12 @@
     <!--Bootstrap icon link-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <!--CSS Link-->
-    <link rel="stylesheet" type="text/css" href="shop.css">
+    <link rel="stylesheet" type="text/css" href="css/shop.css">
     <!--AOS link-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--Javascript link-->
-    <script src="shop.js"></script>
+    <script src="javascript/shop.js"></script>
 </head>
 <body>
     <!--Nav-->
